Faltó reto 4 - sesión 4
Retos 1, 2 y 3

--- a/index.html
+++ b/index.html
@@ -87,8 +87,15 @@
                     </div>                    
                 </form>
         </article>
-
     </section>
+<br>
+    <section class="features">
+        <article class="grid-item">Caracteristica 1</article>
+        <article class="grid-item">Caracteristica 2</article>
+        <article class="grid-item">Caracteristica 3</article>
+        <article class="grid-item">Caracteristica 4</article>
+    </section>
+
 </body>
 
 </html>
